--- a/Final-Project/style/main.css
+++ b/Final-Project/style/main.css
@@ -253,3 +253,17 @@ body {
   display: flex;
   flex-direction: column;
 }
+
+#logo {
+  display: inline-block;
+  vertical-align: middle;
+  margin: auto;
+}
+
+.rotate90 {
+  -webkit-transform: rotate(90deg);
+  -moz-transform: rotate(90deg);
+  -o-transform: rotate(90deg)
+  -ms-transform: rotate(90deg);
+  transform: rotate(90deg);
+}
